# synconf

./: .gitignore  Cargo.toml  README.md  intesett  intesett.conf  intesett.old  pom.xml  setting.bash  synconf
cmd/: config
src/: errors.rs  install.rs  main.rs
src/main/java/net/kigawa/synconf/: Config.java  OS_Util.java  SocketConnector.java  Synconf.java
src/main/java/net/kigawa/synconf/config/: Config.java  Configs.java  HostConfig.java
src/main/java/net/kigawa/synconf/util/: CommandUtil.java  OsUtil.java  PathUtil.java
src/main/rust/: config.rs  errors.rs  install.rs  main.rs  service.rs
