[package]
name = "synconf"
version = "0.1.0"
authors = ["kigawa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "synconf"
path = "src/main/rust/main.rs"
[dependencies]
once_cell = "1.12.0"
reqwest = "0.11.11"
tokio = "1.20.1"